# openstudybuilder-solution-lite

./: .gitlab-ci.yml  CHANGE-LOG.md  DeveloperSetupGuide.md  LICENSE.md  README.md  RELEASE-NOTES.md  SECURITY.md  apidockerfile  compose.yaml  database.Dockerfile  databasedockerfile  docker-compose.yml  documentationdockerfile  env  frontenddockerfile  licenses.md  sonarqubedockerfile  vulnerability_disclosure_policy.md  vulnerability_template.md
clinical-mdr-api/: .env.example  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  OAUTH-README.md  Pipfile  README.md  azurebuild.yml  compose.dev.yaml  compose.yaml  debug.py  docker-compose.yml  generate_openapi.py  generate_openapi_json.py  generate_sbom.py  logging-azure.yaml  openapi.json  pyproject.toml  sbom-additional.md  sbom.md  setup.cfg  setup.py  start_api.sh  startup.sh
clinical-mdr-api/.azuredevops/: pull_request_template.md
clinical-mdr-api/.git-hooks/: README.md  absolute-import-paths.sh  check-openapi-changes.sh  commit-msg  no-field-as-default-value.sh  no-unnecessary-importing-from-typing.sh
clinical-mdr-api/clinical_mdr_api/: config.py  main.py  pytest.ini  utils.py
clinical-mdr-api/clinical_mdr_api/descriptions/: general.py
clinical-mdr-api/clinical_mdr_api/developer_tools/: networksimulator.py
clinical-mdr-api/clinical_mdr_api/domain/: _utils.py  configurations.py  iso_languages.py  template_parameters.py  versioned_object_aggregate.py
clinical-mdr-api/clinical_mdr_api/domain_repositories/: _generic_repository_interface.py  feature_flag_repository.py  generic_repository.py  generic_syntax_repository.py  generic_template_repository.py  library_item_repository.py  neomodel_ext_item_repository.py  notification_repository.py  user_repository.py
clinical-mdr-api/clinical_mdr_api/domains/: __init__.py  _utils.py  enums.py  iso_languages.py  (+3 more)
clinical-mdr-api/common/: config.py  exceptions.py  utils.py
clinical-mdr-api/consumer_api/: consumer_api.py  openapi.json
clinical-mdr-api/ctrxml/: __init__.py  ctrxml.py
clinical-mdr-api/doc/: Auth.md
clinical-mdr-api/m11-templates/: m11-template.html  m11_script.js  m11_style.css
clinical-mdr-api/sblint/: README.md  main.py  sblinter.py
clinical-mdr-api/xml_stylesheets/: blank.xsl  sdtm.xsl
db-schema-migration/: .env.example  .gitignore  .gitmodules  LICENSE.md  Pipfile  README.md  azurebuild.yml  compose.yaml  pyproject.toml  sbom-additional.md  sbom.md  upload_to_wiki.py
db-schema-migration/.azuredevops/: pull_request_template.md
db-schema-migration/data_corrections/: corections_overview_010.md  corections_overview_011.md  correction_006.py  correction_007.py  correction_008.py  correction_010.py  correction_010_1.py  correction_010_2.py  correction_011.py  corrections_overview_010_1.md  corrections_overview_010_2.md  corrections_overview_011.md
db-schema-migration/migrations/: auth.py  common.py  config.py  migration_001.py  migration_002.py  migration_003.py  migration_004.py  migration_005.py  migration_006.py  migration_006_2.py  migration_007.py  migration_008.py  migration_009.py  migration_010.py  migration_011.py  migration_012.py  migration_overview_001.md  migration_overview_002.md  migration_overview_003.md  migration_overview_004.md  migration_overview_005.md  migration_overview_006.md  migration_overview_006_2.md  migration_overview_007.md  migration_overview_008.md  migration_overview_009.md  migration_overview_010.md  migration_overview_011.md  migration_overview_012.md
db-schema-migration/tests/: common.py  test_correction_006.py  test_correction_007.py  test_correction_008.py  test_correction_010.py  test_correction_010_1.py  test_correction_010_2.py  test_correction_011.py  test_migration_001.py  test_migration_002.py  test_migration_003.py  test_migration_004.py  test_migration_005.py  test_migration_006.py  test_migration_006_2.py  test_migration_007.py  test_migration_008.py  test_migration_009.py  test_migration_010.py  test_migration_011.py  test_migration_012.py  test_utils.py
db-schema-migration/verifications/: correction_verification_006.py  correction_verification_007.py  correction_verification_008.py  correction_verification_010.py  correction_verification_010_1.py  correction_verification_010_2.py  correction_verification_011.py  verification_001.py  verification_002.py  verification_003.py  verification_004.py  verification_005.py  verification_006.py  verification_006_2.py  verification_007.py  verification_008.py  verification_009.py  verification_010.py  verification_011.py  verification_012.py
(+5052 files in other folders)
