[project]
name = 'clinical-mdr-api'
readme = 'README.md'
requires-python = '3.11'
license = 'TBD'
authors = [
    {name = 'OpenStudyBuilder', email = 'OpenStudyBuilder@gmail.com'}
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project.urls]
homepage = 'https://gitlab.com/Novo-Nordisk/nn-public/openstudybuilder'

[tool.pytest.ini_options]
addopts = "--cov-config=.coveragerc"

[tool.isort]
profile = 'black'
src_paths = ['clinical_mdr_api', 'consumer_api']
skip = ['clinical_mdr_api/models/__init__.py']

[tool.pylint.'MASTER']
extension-pkg-allow-list = 'pydantic, lxml'
unsafe-load-any-extension = 'yes'
generated-members = '(.*)\.nodes\.(.*),(.*)\.connect$,(.*)\.__label__$,(.*)\.filter$,(.*)\.single$,_member_map_,.*.has_.*,ParameterTemplateRoot\.get,RelationshipDefinition\.get_or_none'

[tool.pylint.'MESSAGES CONTROL']
# Temporarily disabling trivial warnings
disable = 'missing-function-docstring,missing-class-docstring,missing-module-docstring,fixme,global-statement,import-outside-toplevel,protected-access,too-few-public-methods,too-many-ancestors,too-many-function-args,arguments-differ,cyclic-import'

[tool.pylint.'FORMAT']
max-line-length = 200
max-module-lines = 6000

[tool.pylint.'BASIC']
good-names = '_,c,e,i,j,k,l,r,v,x,y,z,ar,ex,rs,_AggregateRootType'

[tool.pylint.'DESIGN']
max-args = 35
max-attributes = 85
max-branches = 50
max-locals = 46
max-public-methods = 81
max-returns = 9
max-statements = 100

[tool.pylint.'REFACTORING']
max-nested-blocks = 10

[tool.pylint.'SIMILARITIES']
min-similarity-lines = 1000


