[metadata]
name = clinical-mdr-api
author = Novo Nordisk A/S
author_email = OpenStudyBuilder@gmail.com
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
license = Components with MIT and GPLv3, documentation CC-BY-4.0
homepage = https://gitlab.com/Novo-Nordisk/nn-public/openstudybuilder

[files]
packages =
    clinical_mdr_api

[options.package_data]
clinical_mdr_api.services.study_flowchart = template.docx
clinical_mdr_api = apiVersion

[flake8]
max-line-length = 88
extend-ignore = E203
