[project]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"


[tool.pylint.'MASTER']
extension-pkg-allow-list = 'locust'

[tool.pylint.'MESSAGES CONTROL']
disable = 'duplicate-code,missing-function-docstring,missing-module-docstring,line-too-long,no-name-in-module,protected-access'

[tool.pylint.'FORMAT']
max-line-length = 150
max-module-lines = 5000
max-locals = 20
max-statements = 100

[tool.pylint.'BASIC']
good-names = 'x,i,j,k,ex,rs,Run,_,e'

[tool.isort]
profile = "black"
